--- a/templates/base.html
+++ b/templates/base.html
@@ -4,14 +4,36 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Home</title>
+        <style>
+            body {
+                font-family: Roboto, arial, sans-serif;
+                text-align: center;
+            }
+            a {
+                padding: 1rem;
+                text-decoration: none;
+            }
+            form {
+                padding: 1rem;
+            }
+            input {
+                padding: 1rem;
+                margin: 1rem;
+                text-align: center;
+            }
+            h2 {
+                padding: 1rem;
+            }
+        </style>
+        <title>Brainly Search</title>
     </head>
     <body>
         <a href="/"><h1>Input Query</h1></a>
         <form id="query_form" action="#" method="POST">
-            <input type="text" name="query_input" placeholder="Query Input" onpaste="submit_query()" autofocus />
-            <input type="text" name="query_site" placeholder="Specify Site" value="brainly.com" />
-            <input type="number" name="result_number" placeholder="Result Number" value="5" min="1" max="100" />
+            <input type="text" name="query_input" placeholder="Query Input" onpaste="submit_query()" autofocus autocomplete="false" />
+            <input type="text" name="query_site" placeholder="Specify Site" value="brainly.com" autocomplete="false" />
+            <input type="number" name="result_number" placeholder="Result Number" value="5" min="1" max="100" autocomplete="false" />
+            <br>
             <input type="submit" value="Google Search" />
         </form>
 
@@ -20,7 +42,6 @@
         <script>
             function submit_query() {
                 setTimeout(() => {
-                    // console.log(document.getElementsByName("query_input")[0].value)
                     document.getElementById("query_form").submit();
                 });
             }
