--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,3 @@
 {% extends "base.html" %}
 
-{% block query_result %}<br><br>{{result}}{% endblock %}
+{% block query_result %}{{result}}{% endblock %}
