--- a/templates/base.html
+++ b/templates/base.html
@@ -8,8 +8,10 @@
             body {
                 font-family: Roboto, arial, sans-serif;
                 text-align: center;
+                background-color: rgb(25, 25, 25);
             }
             a {
+                color: rgb(83, 126, 197);
                 padding: 1rem;
                 text-decoration: none;
             }
@@ -20,9 +22,36 @@
                 padding: 1rem;
                 margin: 1rem;
                 text-align: center;
+                background-color: rgb(236, 219, 186);
+                border: none;
+                border-radius: 10px;
+            }
+            input[type="number"]::-webkit-inner-spin-button,
+            input[type="number"]::-webkit-outer-spin-button {
+                -webkit-appearance: none;
+                margin: 0;
+            }
+            h1 {
+                color: rgb(233, 166, 166);
+                font-size: 2.5rem;
             }
             h2 {
+                color: rgb(221, 221, 221);
                 padding: 1rem;
+            }
+            h3 {
+                color: rgb(221, 221, 221);
+            }
+            footer {
+                position: absolute;
+                left: 0;
+                bottom: 0;
+                width: 100%;
+                height: 6.5rem;
+                background: rgb(41, 58, 128);
+            }
+            footer a {
+                color: rgb(243, 148, 34);
             }
         </style>
         <title>Brainly Search</title>
@@ -33,11 +62,17 @@
             <input type="text" name="query_input" placeholder="Query Input" onpaste="submit_query()" autofocus autocomplete="false" />
             <input type="text" name="query_site" placeholder="Specify Site" value="brainly.com" autocomplete="false" />
             <input type="number" name="result_number" placeholder="Result Number" value="5" min="1" max="100" autocomplete="false" />
-            <br>
             <input type="submit" value="Google Search" />
         </form>
 
         {% block query_result %} {% endblock %}
+
+        <footer>
+            <h3>Useful Websites</h3>
+            <a target="_blank" rel="noopener noreferrer" href="https://wordcounter.net/">Word Counter</a>
+            <a target="_blank" rel="noopener noreferrer" href="http://www.textinflator.com/">Text Inflator</a>
+            <a target="_blank" rel="noopener noreferrer" href="https://www.textcompactor.com/">Text Compator</a>
+        </footer>
 
         <script>
             function submit_query() {
