add multiple site support and quizlet.com is now added to default sites

--- a/templates/base.html
+++ b/templates/base.html
@@ -60,7 +60,7 @@
         <a href="/"><h1>Input Query</h1></a>
         <form id="query_form" action="#" method="POST">
             <input type="text" name="query_input" placeholder="Query Input" onpaste="submit_query()" autofocus autocomplete="false" />
-            <input type="text" name="query_site" placeholder="Specify Site" value="brainly.com" autocomplete="false" />
+            <input type="text" name="query_site" placeholder="Specify Site" value="brainly.com quizlet.com" autocomplete="false" />
             <input type="number" name="result_number" placeholder="Result Number" value="5" min="1" max="100" autocomplete="false" />
             <input type="submit" value="Google Search" />
         </form>
